--- a/TransporteSerieNacionalFX/src/visual/Calendar.fxml
+++ b/TransporteSerieNacionalFX/src/visual/Calendar.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,6 +14,11 @@
                 <Font name="Segoe UI Symbol" size="28.0"/>
             </font>
         </Label>
-        <JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="61.0" prefHeight="507.0" prefWidth="729.0"/>
+        <JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="61.0" prefHeight="460.0" prefWidth="729.0"/>
+        <JFXButton fx:id="saveExcel" buttonType="RAISED" layoutX="638.0" layoutY="532.0" onAction="#saveExcel" ripplerFill="#f8f6f6" style="-fx-background-color: green;" text="Save" textFill="WHITE">
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
+        </JFXButton>
     </children>
 </AnchorPane>
