--- a/TransporteSerieNacionalFX/bin/visual/Home.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Home.fxml
@@ -4,6 +4,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,12 +16,12 @@
     <children>
         <Pane fx:id="sidePane" layoutY="137.0" prefHeight="577.0" prefWidth="208.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="137.0">
             <children>
-                <JFXButton fx:id="buttonCalendar" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="10.0" layoutX="23.0" layoutY="49.0" onAction="#showCalendar" prefHeight="68.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Calendario" textFill="WHITE">
+                <JFXButton fx:id="buttonCalendar" alignment="CENTER" buttonType="RAISED" graphicTextGap="5.0" layoutX="21.0" layoutY="68.0" onAction="#showCalendar" prefHeight="51.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Calendario" textFill="WHITE">
                     <font>
                         <Font name="Segoe UI Symbol" size="16.0" />
                     </font>
                     <graphic>
-                        <ImageView fitHeight="59.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../resources/calendar.png" />
                             </image>
@@ -29,23 +30,29 @@
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
+               <tooltip>
+                  <Tooltip text="Calendario generado para el torneo" />
+               </tooltip>
                 </JFXButton>
-                <JFXButton fx:id="buttonTeam" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="10.0" layoutX="23.0" layoutY="189.0" onAction="#showTeams" prefHeight="68.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Equipos" textFill="WHITE">
+                <JFXButton fx:id="buttonTeam" buttonType="RAISED" graphicTextGap="5.0" layoutX="21.0" layoutY="163.0" onAction="#showTeams" prefHeight="51.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Equipos" textFill="WHITE">
                     <font>
                         <Font name="Segoe UI Symbol" size="16.0" />
                     </font>
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
-                    <graphic>
-                        <ImageView fitHeight="59.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
+               <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../resources/field.png" />
                             </image>
                         </ImageView>
-                    </graphic>
+               </graphic>
+               <tooltip>
+                  <Tooltip text="Listado de los equipoes participantes en el torneo" />
+               </tooltip>
                 </JFXButton>
-            <JFXButton fx:id="buttonInfromation" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="10.0" layoutX="23.0" layoutY="329.0" onAction="#showInformation" prefHeight="86.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Ayuda" textFill="WHITE">
+            <JFXButton fx:id="buttonInfromation" buttonType="RAISED" graphicTextGap="5.0" layoutX="21.0" layoutY="360.0" onAction="#showInformation" prefHeight="51.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Ayuda" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Symbol" size="16.0" />
                </font>
@@ -53,12 +60,33 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
                <graphic>
-                  <ImageView fitHeight="61.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/baseballInformation.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <tooltip>
+                  <Tooltip text="Información sobre la aplicación" />
+               </tooltip>
+            </JFXButton>
+            <JFXButton fx:id="buttonInfromation1" buttonType="RAISED" graphicTextGap="5.0" layoutX="21.0" layoutY="261.0" lineSpacing="10.0" onAction="#showInformation" prefHeight="51.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-border-color: white; -fx-background-radius: 100; -fx-border-radius: 100;" text="Importar" textAlignment="JUSTIFY" textFill="WHITE" textOverrun="CENTER_WORD_ELLIPSIS">
+               <font>
+                  <Font name="Segoe UI Symbol" size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <graphic>
+                  <ImageView fitHeight="34.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/icons8_microsoft_excel_2019_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <tooltip>
+                  <Tooltip text="Permite importar un calendario desde un fichero Excel y modificarlo" />
+               </tooltip>
             </JFXButton>
             </children>
         </Pane>
