--- a/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
@@ -15,7 +15,7 @@
             </font>
         </Label>
         <JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="61.0" prefHeight="460.0" prefWidth="729.0"/>
-        <JFXButton fx:id="saveExcel" buttonType="RAISED" layoutX="638.0" layoutY="532.0" onAction="#saveExcel" ripplerFill="#f8f6f6" style="-fx-background-color: green;" text="Save" textFill="WHITE">
+        <JFXButton fx:id="saveExcel" buttonType="RAISED" layoutX="638.0" layoutY="532.0" onAction="#saveExcel" ripplerFill="#f8f6f6" style="-fx-background-color: green;" text="Exportar" textFill="WHITE">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
