--- a/TransporteSerieNacionalFX/bin/styles/PrincipalMenu.css
+++ b/TransporteSerieNacionalFX/bin/styles/PrincipalMenu.css
@@ -10,3 +10,17 @@
 .jfx-button:hover{
     -fx-effect: dropshadow(two-pass-box , #011b1d, 8, 0.1 , 1, 3);
 }
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+    -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #2163cf 75%, #1e27cf 100%);
+    -fx-text-fill: white;
+}
+
+.list-cell:even { /* <=== changed to even */
+    -fx-background-color: white;
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: #0093ff;
+    -fx-text-fill: white;
+}
