--- a/TransporteSerieNacionalFX/bin/visual/SelectionTeams.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/SelectionTeams.fxml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="577.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SelectionTeamsController">
+<AnchorPane prefHeight="863.0" prefWidth="1713.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SelectionTeamsController">
     <children>
-        <JFXListView fx:id="teamsSelectionListView" layoutX="50.0" layoutY="85.0" prefHeight="452.0" prefWidth="284.0" />
-        <Pane fx:id="imageSelectionPane" layoutX="411.0" layoutY="85.0" prefHeight="294.0" prefWidth="294.0" />
-        <Label layoutX="325.0" layoutY="40.0" text="Equipos" textFill="#2f2484">
-            <font>
-                <Font name="Segoe UI Symbol" size="30.0" />
-            </font>
-        </Label>
-        <JFXButton fx:id="select" layoutX="499.0" layoutY="461.0" onAction="#selectTeams" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #2f2484; -fx-background-radius: 100;" text="Seleccionar" textFill="#fcf8f8">
+        <JFXButton fx:id="select" layoutX="984.0" layoutY="786.0" onAction="#selectTeams" prefHeight="51.0" prefWidth="118.0" stylesheets="@../styles/PrincipalMenu.css" text="Seleccionar" textFill="#fcf8f8">
             <font>
                 <Font name="Segoe UI Symbol" size="16.0" />
             </font>
@@ -25,5 +19,53 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </JFXButton>
+      <JFXToggleButton fx:id="selectAll" layoutX="75.0" layoutY="14.0" onAction="#selectAllTeams" size="11.0" text="Seleccionar todos" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </JFXToggleButton>
+        <JFXListView fx:id="teamsSelectionListView" layoutX="51.0" layoutY="80.0" prefHeight="771.0" prefWidth="463.0" stylesheets="@../styles/PrincipalMenu.css" />
+      <Label layoutX="648.0" layoutY="29.0" text="Seleccionar campeón y subcampeón" textFill="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+      </Label>
+      <JFXToggleButton fx:id="champVsSub" layoutX="514.0" layoutY="17.0" onAction="#setChampVsSub" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXToggleButton>
+      <JFXComboBox fx:id="comboChamp" focusColor="#2f2484" labelFloat="true" layoutX="541.0" layoutY="80.0" prefHeight="53.0" prefWidth="244.0" promptText="Campeón">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXComboBox>
+      <JFXComboBox fx:id="comboSub" focusColor="#2f2484" labelFloat="true" layoutX="875.0" layoutY="80.0" prefHeight="53.0" prefWidth="258.0" promptText="Subcampeón">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXComboBox>
+      <Label layoutX="1381.0" layoutY="29.0" text="Segunda Vuelta" textFill="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+      </Label>
+      <JFXToggleButton fx:id="secondRoundButton" layoutX="1221.0" layoutY="17.0" onAction="#setSecondRound" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXToggleButton>
+      <Label layoutX="966.0" layoutY="141.0" text="Mutaciones" textFill="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+      </Label>
+      <JFXListView fx:id="mutationListView" layoutX="541.0" layoutY="186.0" prefHeight="586.0" prefWidth="1066.0" />
     </children>
 </AnchorPane>
