--- a/TransporteSerieNacionalFX/bin/visual/SelectGrid.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/SelectGrid.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="panel" prefHeight="863.0" prefWidth="1713.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SelectGridController">
+<AnchorPane fx:id="panel" prefHeight="651.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SelectGridController">
     <children>
-        <JFXButton fx:id="saveLocations" layoutX="928.0" layoutY="809.0" onAction="#saveLocations" prefHeight="49.0" prefWidth="158.0" stylesheets="@../styles/PrincipalMenu.css" text="Guardar Sedes" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="631.0">
+        <JFXButton fx:id="saveLocations" layoutX="618.0" layoutY="575.0" onAction="#saveLocations" prefHeight="49.0" prefWidth="158.0" stylesheets="@../styles/PrincipalMenu.css" text="Guardar Sedes" textFill="WHITE">
             <font>
                 <Font name="Segoe UI Symbol" size="20.0" />
             </font>
@@ -19,21 +19,21 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </JFXButton>
-        <ScrollPane layoutX="69.0" layoutY="14.0" prefHeight="793.0" prefWidth="1713.0" AnchorPane.bottomAnchor="64.0" AnchorPane.rightAnchor="4.0">
+        <ScrollPane layoutY="1.0" prefHeight="560.0" prefWidth="1148.0">
             <content>
-                <GridPane fx:id="selectionGrid" prefHeight="799.0" prefWidth="1698.0">
+                <GridPane fx:id="selectionGrid" prefHeight="557.0" prefWidth="1147.0">
 
                 </GridPane>
             </content>
         </ScrollPane>
-        <Label layoutX="397.0" layoutY="793.0" prefHeight="52.0" prefWidth="494.0" text="Calendario Balanceado:" textFill="#2f2484" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="822.0">
+        <Label layoutX="87.0" layoutY="570.0" prefHeight="52.0" prefWidth="494.0" text="Calendario Balanceado:" textFill="#2f2484">
             <font>
                 <Font name="Segoe UI Symbol" size="40.0" />
             </font>
         </Label>
-        <FontAwesomeIconView fx:id="balanceCalendar" fill="#10a132" glyphName="CHECK" layoutX="825.0" layoutY="850.0" size="48" AnchorPane.bottomAnchor="5.205356597900391" AnchorPane.rightAnchor="840.0" />
-        <FontAwesomeIconView fx:id="notbalanceCalendar" fill="#f50000" glyphName="TIMES" layoutX="828.0" layoutY="850.0" size="48" text="" wrappingWidth="40.999997831881046" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="844.0" />
-      <JFXButton fx:id="btnCalendar" layoutX="1129.0" layoutY="811.0" onAction="#showCalendar" stylesheets="@../styles/PrincipalMenu.css" text="Calendario" textFill="WHITE">
+        <FontAwesomeIconView fx:id="balanceCalendar" fill="#10a132" glyphName="CHECK" layoutX="515.0" layoutY="616.0" size="48" />
+        <FontAwesomeIconView fx:id="notbalanceCalendar" fill="#f50000" glyphName="TIMES" layoutX="518.0" layoutY="616.0" size="48" text="" wrappingWidth="40.999997831881046" />
+      <JFXButton fx:id="btnCalendar" layoutX="819.0" layoutY="577.0" onAction="#showCalendar" stylesheets="@../styles/PrincipalMenu.css" text="Calendario" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
