Added PopUp Options

--- a/TransporteSerieNacionalFX/bin/styles/application.css
+++ b/TransporteSerieNacionalFX/bin/styles/application.css
@@ -1,6 +1,6 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 .tab {
-    -fx-pref-width: 90;
+    -fx-pref-width: 120;
     -fx-pref-height: 60;
     -fx-cursor: hand;
 }
@@ -22,13 +22,22 @@
     -fx-border-color: #ff0006;
 }
 
+.jfx-tab-pane .tab .tab-label {
+    -fx-alignment: CENTER;
+    -fx-text-fill: white;
+    -fx-font-size: 24px; /* before it was 12px */
+    -fx-font-weight: bold;
+    -fx-wrap-text: true;
+}
 
-.table-view .column-header .label {
+
+
+/*.table-view .column-header .label {
     /* -fx-background-color: white;
      -fx-pref-width: 288;
      -fx-pref-height: 30;
      -fx-cursor: hand;*/
-    -fx-font: 30px "Segoe UI Symbol";
+   /* -fx-font: 30px "Segoe UI Symbol";
     -fx-text-fill: #2f2484;
 }
 
@@ -36,16 +45,19 @@
     -fx-background-color: #c8d4ff;
 }
 
+.table-view{
+    -fx-base: white;
+}
 .table-view .column-header {
     -fx-background-color: white;
     /* -fx-pref-width: 500;
      -fx-pref-height: 30;*/
-    -fx-cursor: hand;
+    /*-fx-cursor: hand;
     -fx-alignment: CENTER;
 }
 
 .table-cell {
-    -fx-pref-width: 300;
+    -fx-pref-width: 550;
     -fx-border-color: -fx-box-border -fx-box-border transparent transparent;
     -fx-font: 24px "Segoe UI Symbol";
     -fx-text-fill: #2f2484;
@@ -55,7 +67,7 @@
 .table-cell:hover {
     -fx-background-color: #c8d4ff;
     -fx-text-fill: white;
-}
+}*/
 
 .list-cell {
     -fx-border-color: -fx-box-border -fx-box-border transparent transparent;
@@ -69,12 +81,12 @@
 
 }
 
-#table .table-view .column-header .label {
+/*#table .table-view .column-header .label {
     /* -fx-background-color: white;
      -fx-pref-width: 288;
      -fx-pref-height: 30;
      -fx-cursor: hand;*/
-    -fx-font: 34px "Segoe UI Symbol";
+    /*-fx-font: 34px "Segoe UI Symbol";
     -fx-text-fill: #2f2484;
 }
 
@@ -86,9 +98,9 @@
     -fx-background-color: white;
     /* -fx-pref-width: 288;
      -fx-pref-height: 30;*/
-    -fx-cursor: hand;
+    /*-fx-cursor: hand;
     -fx-alignment: CENTER;
-}
+}*/
 
 #selectionGrid .label {
     -fx-text-fill: #2f2484;
@@ -106,6 +118,52 @@
 #logo:medium-device{
     -fx-pref-height: 100;
     -fx-pref-width: 100;
+}
+
+.table-view {
+
+    -fx-base: white;
+    -fx-control-inner-background: white;
+    -fx-background-color: white;
+    -fx-table-cell-border-color: transparent;
+    -fx-table-header-border-color: transparent;
+    -fx-padding: 5;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-size: 60pt;
+    -fx-border-width: 0 0 1 0;
+    -fx-background-color: transparent;
+    -fx-border-color:
+            transparent
+            transparent
+            derive(-fx-base, 80%)
+            transparent;
+    -fx-border-insets: 0 10 1 0;
+}
+
+.table-view .column-header .label {
+    -fx-font-size: 22px;
+    -fx-font-family: "Segoe UI Light";
+    -fx-text-fill: #2f2484;
+    -fx-alignment: center;
+    -fx-opacity: 1;
+}
+
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-focus-color;
+}
+
+.table-cell {
+    -fx-pref-width: 548;
+    -fx-border-color: -fx-box-border -fx-box-border transparent transparent;
+    -fx-font: 21px "Segoe UI Symbol";
+    -fx-text-fill: #2f2484;
+    -fx-alignment: CENTER;
 }
 
 
