--- a/TransporteSerieNacionalFX/bin/visual/Home.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Home.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,27 +23,14 @@
     </AnchorPane>
     <AnchorPane layoutX="-2.0" prefHeight="136.0" prefWidth="1360.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="2.0">
         <children>
-            <JFXButton fx:id="buttonPrincipalMenu" buttonType="RAISED" contentDisplay="CENTER" graphicTextGap="6.0" onAction="#showPrincipalMenu" prefHeight="136.0" prefWidth="150.0" ripplerFill="#2f2484" text=" " AnchorPane.rightAnchor="1210.0">
-                <font>
-                    <Font name="Segoe UI Symbol" size="13.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="106.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@../resources/snb1.png" />
-                        </image>
-                        <cursor>
-                            <Cursor fx:constant="DEFAULT" />
-                        </cursor>
-                    </ImageView>
-                </graphic>
-                <cursor>
-                    <Cursor fx:constant="HAND" />
-                </cursor>
-                <effect>
-                    <Shadow />
-                </effect>
-            </JFXButton>
+              <ImageView fitHeight="136.0" fitWidth="168.0" layoutX="23.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../resources/snb1.png" />
+                  </image>
+                  <cursor>
+                      <Cursor fx:constant="DEFAULT" />
+                  </cursor>
+              </ImageView>
             <JFXButton fx:id="buttonCalendarConfiguration" buttonType="RAISED" contentDisplay="CENTER" layoutX="1187.0" layoutY="23.0" onAction="#showCalendarConfiguration" prefHeight="92.0" prefWidth="85.0" ripplerFill="#2f2484" text=" " AnchorPane.leftAnchor="1187.0" AnchorPane.rightAnchor="46.0">
                 <cursor>
                     <Cursor fx:constant="HAND" />
@@ -70,7 +56,7 @@
     </AnchorPane>
     <AnchorPane layoutX="-3.0" layoutY="137.0" prefHeight="649.0" prefWidth="213.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;">
         <children>
-          <JFXButton fx:id="buttonImportCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="6.0" layoutX="30.0" layoutY="384.0" lineSpacing="10.0" onAction="#importCalendar" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Importar" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+          <JFXButton fx:id="buttonImportCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="6.0" layoutX="30.0" layoutY="190.0" lineSpacing="10.0" onAction="#importCalendar" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Importar" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
               <font>
                   <Font name="Segoe UI Symbol" size="16.0" />
               </font>
@@ -88,7 +74,7 @@
                   <Tooltip text="Permite importar un calendario desde un fichero Excel y modificarlo" />
               </tooltip>
           </JFXButton>
-          <JFXButton fx:id="buttonInfromation" buttonType="RAISED" graphicTextGap="20.0" layoutX="30.0" layoutY="282.0" onAction="#showInformation" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Ayuda" textAlignment="RIGHT" textFill="WHITE" wrapText="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+          <JFXButton fx:id="buttonInfromation" buttonType="RAISED" graphicTextGap="20.0" layoutX="30.0" layoutY="373.0" onAction="#showInformation" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Ayuda" textAlignment="RIGHT" textFill="WHITE" wrapText="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
               <font>
                   <Font name="Segoe UI Symbol" size="16.0" />
               </font>
@@ -106,7 +92,7 @@
                   <Tooltip text="Información sobre la aplicación" />
               </tooltip>
           </JFXButton>
-            <JFXButton fx:id="buttonTeam" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="15.0" layoutX="30.0" layoutY="191.0" onAction="#showTeams" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Equipos" textAlignment="RIGHT" textFill="WHITE" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+            <JFXButton fx:id="buttonTeam" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="15.0" layoutX="30.0" layoutY="283.0" onAction="#showTeams" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Equipos" textAlignment="RIGHT" textFill="WHITE" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
                 <font>
                     <Font name="Segoe UI Symbol" size="16.0" />
                 </font>
